# manget

./: .dockerignore  .gitignore  Cargo.toml  Dockerfile  LICENSE  README.md
.github/workflows/: rust.yml
extension/: edge_policy.reg  manget_chrome.crx  updates.xml
extension/manget_chrome/: background.js  manifest.json
extension/manget_firefox/: background.js  manifest.json
libkepubify/: go.mod  main.go
manget/: Cargo.toml
manget/src/: download.rs  lib.rs  manga.rs  mangadex.rs  mangapark.rs  truyenqq.rs
manget/src/manga/: blogtruyen.rs  mangadex.rs  mangapark.rs  nettruyen.rs  toptruyen.rs  truyenqq.rs  truyentranhtuan.rs
manget_cli/: Cargo.toml  list.txt
manget_cli/src/: main.rs
manget_server/: Cargo.toml
manget_server/src/: main.rs  novel.rs
src/: download.rs  lib.rs  main.rs  manga.rs  mangapark.rs
