[package]
name = "manget_cli"
version = "0.4.0"
edition = "2021"
authors = ["Nguyen Duc Toan <ntoan96@gmail.com>"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.3.0", features = ["derive"] }
env_logger = "0.10.0"
futures = "0.3.28"
manget = { version = "0.*", path = "../manget" }
tokio = { version = "1.28.1", features = ["macros"] }
tower = { version = "0.4.13", features = ["limit", "util"] }
