[package]
name = "manget_server"
version = "0.2.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = "0.6.18"
manget = { version = "0.1.0", path = "../manget" }
serde = { version = "1.0.163", features = ["derive"] }
tempfile = "3.5.0"
thiserror = "1.0.40"
tokio = { version = "1.28.1", features = ["macros", "signal"] }
tower-http = { version = "0.4.0", features = ["trace"] }
tracing = "0.1.37"
tracing-subscriber = "0.3.17"
uuid = { version = "1.3.3", features = ["v4"] }
