[package]
name = "manget_server"
version = "0.2.0"
edition = "2021"
authors = ["Nguyen Duc Toan <ntoan96@gmail.com>"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4.3.1"
manget = { version = "0.*", path = "../manget" }
serde = { version = "1.0.163", features = ["derive"] }
tempfile = "3.5.0"
thiserror = "1.0.40"
tracing = "0.1.37"
tracing-subscriber = "0.3.17"
uuid = { version = "1.3.3", features = ["v4"] }
