[package]
name = "manget_server"
version = "0.4.1"
edition = "2021"
authors = ["Nguyen Duc Toan <ntoan96@gmail.com>"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = { version = "0.7.9", features = ["macros"] }
epub-builder = "0.7.4"
image = "0.25.5"
manget = { version = "0.*", path = "../manget" }
reqwest = "0.12.9"
sanitize-filename = "0.6.0"
scraper = "0.22.0"
serde = { version = "1.0.163", features = ["derive"] }
tempfile = "3.5.0"
thiserror = "1.0.40"
tokio = { version = "1.42.0", features = ["macros", "rt-multi-thread"] }
tower-http = { version = "0.6.2", features = ["cors", "trace"] }
tracing = "0.1.37"
tracing-subscriber = "0.3.17"
uuid = { version = "1.3.3", features = ["v4"] }
